# slitu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: fs.rs  lib.rs
src/fs/: compare.rs  mod.rs  slash_fmt.rs
src/time/: mod.rs  timestamp.rs
tests/assets/: dissimilar_ids_2.json  exact_copy_of_file.json  file_2.json  longer.json  shorter.json
