# Copyright (c) 2025 By David "Hankinsohl" Hankins.
# This software is licensed under the terms of the MIT License.
# Created by Hankinsohl on 2/24/2026.
[package]
name = "slitu"
version = "0.0.1-alpha.2"
edition = "2024"

[features]
default = ["fs", "time"]
fs = []
time = []

[dependencies]
chrono = { version = "0.4.44", features = ["now", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
